--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,36 +14,29 @@ body {
 }
 
 .gradient-bg-welcome {
-  background-color:#0f0e13;
+  background-color:#548CA8;
   background-image: 
-    radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
-    radial-gradient(at 50% 0%, hsla(225,39%,30%,1) 0, transparent 50%), 
-    radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 50%);
-}
-
-.gradient-bg-services {
-  background-color:#0f0e13;
-  background-image: 
-    radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
-    radial-gradient(at 50% 100%, hsla(225,39%,25%,1) 0, transparent 50%);
+    radial-gradient(at 0% 10%, hsla(206, 45%, 25%, 1) 0, transparent 50%),
+    radial-gradient(at 50% 0%, hsla(206, 55%, 75%, 1) 0, transparent 50%), 
+    radial-gradient(at 150% 0%, rgb(235, 236, 238) 0, transparent 50%);
 }
 
 .gradient-bg-transactions {
-  background-color: #0f0e13;
+  background-color: #548CA8;
   background-image: 
-    radial-gradient(at 0% 100%, hsla(253,16%,7%,1) 0, transparent 50%), 
-    radial-gradient(at 50% 0%, hsla(225,39%,25%,1) 0, transparent 50%);
+    radial-gradient(at 0% 100%, hsla(206, 45%, 25%, 1) 0, transparent 50%);
+    /* radial-gradient(at 100% 0%, hsla(206, 45%, 25%, 1) 0, transparent 50%); */
 }
 
 .gradient-bg-footer {
-  background-color: #0f0e13;
+  background-color: #548CA8;
   background-image: 
-    radial-gradient(at 0% 100%, hsla(253,16%,7%,1) 0, transparent 53%), 
-    radial-gradient(at 50% 150%, hsla(339,49%,30%,1) 0, transparent 50%);
+    radial-gradient(at 0% 10%, hsla(206, 45%, 25%, 1) 0, transparent 53%), 
+    radial-gradient(at 0% 250%, rgb(235, 236, 238) 0, transparent 50%);
 }
 
 .blue-glassmorphism {
-  background: rgb(39, 51, 89, 0.4);
+  background: #D0E8F2;
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(5px);
@@ -51,9 +44,8 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.3);
 }
 
-/* white glassmorphism */
 .white-glassmorphism {
-  background: rgba(255, 255, 255, 0.05);
+  background: #fff;
   border-radius: 16px;
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
@@ -70,13 +62,6 @@ body {
     radial-gradient(at 27% 71%, hsla(336,91%,65%,1) 0, transparent 49%), 
     radial-gradient(at 74% 89%, hsla(30,98%,65%,1) 0, transparent 51%), 
     radial-gradient(at 53% 75%, hsla(174,94%,68%,1) 0, transparent 45%);
-}
-
-.text-gradient {
-  background-color: #fff;
-  background-image: radial-gradient(at 4% 36%, hsla(0,0%,100%,1) 0, transparent 53%), radial-gradient(at 100% 60%, rgb(0, 0, 0) 0, transparent 50%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
 }
 
 @tailwind base;
